--- a/public/golive-checklist.html
+++ b/public/golive-checklist.html
@@ -209,9 +209,9 @@
                     <div class="checklist-item">
                         <div class="checklist-header">
                             <strong>Bundle Size Analysis</strong>
-                            <span class="status in-progress">In Progress</span>
+                            <span class="status done">Done</span>
                         </div>
-                        <p class="checklist-details">Will run bundle analysis to identify and eliminate large JS packages, ensuring a fast initial page load for users.</p>
+                        <p class="checklist-details">Analysis complete for <a href="./analyze/client.html">client</a>, <a href="./analyze/nodejs.html">server</a> (nodejs), and <a href="./analyze/edge.html">edge</a> bundles. Reports have been generated and the results are good, with no oversized packages identified.</p>
                     </div>
                 </div>
             </div>
